--- a/VRChat/23/943423.html
+++ b/VRChat/23/943423.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "I47IuriUlyOJ+024iyOxeIE7soLhIa87oxVfP9KRFvs="></script>
+    "vHNd5+iGBeyg0S5aStTUKkUCclxXM9NXN+Cdt3Ep2ok="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat風アイコン詰め合わせ","description":"日常をバーチャルに変える為のアイコン詰め合わせ。\n\n・利用規約\n改変：可\n商用利用：可\n素材の再配布：不可\n\n・免責事項\n本データを使用して発生したいかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/943423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e70b6b1-6fb3-42e5-bfec-d750c1f28694/i/943423/6a6301c6-f7ee-448f-9647-6cf7de8f9c21_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I47IuriUlyOJ+024iyOxeIE7soLhIa87oxVfP9KRFvs="></script>
+    nonce="vHNd5+iGBeyg0S5aStTUKkUCclxXM9NXN+Cdt3Ep2ok="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -450,9 +450,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
