--- a/VRChat/94/942794.html
+++ b/VRChat/94/942794.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ooN+KKqLopJgORyupb6HSrsLklln22jZFosSijilxRs="></script>
+    "jxNqaG1r8vjRiyb966pbaILpdF/04Ikk7wo2PIvb6p4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター","description":"VRChatでの利用を主としたHumanoidボーン入りゴミ箱です。\nFBXデータ、PNG画像、Unity Package同梱。\n\n規約みたいなの\n\n・他の方に迷惑をかけそうだったり、\n  めんどくさそうなアレに使ったりしなければ大体OKだと思います\n・著作権は多分放棄してるので\n  再配布とか改変とかしたりしなかったりしてください\n・当アバターを利用したことにより生じたなんかについて\n  作者は一切の責任を負いませんと言い切りたい所ですが、\n  この文章のせいでより厄介なケースに発展しちゃったりするらしいですね。よくわかんないです","url":"https://booth.pm/ja/items/942794","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10c5f6cb-42b1-49c1-b042-77878355a31f/i/942794/a4a5322d-7ffe-4730-b0ef-0d9307e27ba5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ooN+KKqLopJgORyupb6HSrsLklln22jZFosSijilxRs="></script>
+    nonce="jxNqaG1r8vjRiyb966pbaILpdF/04Ikk7wo2PIvb6p4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -346,9 +346,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
