--- a/VRChat/95/942095.html
+++ b/VRChat/95/942095.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hbiQDmVfkFvl88NkJ1/vfT9cnV+bus1mZ/r7k3G3cwk="></script>
+    "13itPtI55FOaWhCZlugFQ+qBrM3mKcpKnKGnrXD9/wQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あめ子の夏祭りセット","description":"夏をみんなで満喫したい思いから生まれた『あめ子の夏祭りセット』です。\nVRChatのアバターに組み込んで夏を楽しもう！\n\n【セット内容】\nわたあめ\nわたあめ(ひつじ)\nわたあめ(袋入り)\nお面\n…各FBXファイル、テクスチャ\n\n手持ち花火\n…FBXファイル、テクスチャ、音声、説明書\n\n※2023/7/13\nわたあめ＆手持ち花火のprefab入りunitypackageを追加しました\n\n\n【OK】\nVRChatでのご利用\n動画や凸配信への映り込み(収益化・非収益化を問わず)\n夏祭りセットを詳細に紹介してくださる場合、配布元の表記をお願いいたします。\n\n【NG】\nVRChat外でのご利用\n自作発言\n原型・色彩を変更する改変(利用できるようアバターへ組み込む以外の改変)\n二次配布\n※素材を他の人が利用できる状態で提供すること。\nぺデスタルで不特定多数が使える状態のアバターへの組み込み、\n他者がデータのダウンロードができる環境の構築など\nVRchatへのアップロード以外でデータを他者へ譲り渡す行為\n\n\n制作：安倍マリステラ\n一部テクスチャ：わたあめ子","url":"https://booth.pm/ja/items/942095","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4a7842d-1a6a-4d2b-a80c-4c704fe5040b/i/942095/47085bc8-309d-4778-8b9d-77f308904f7e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hbiQDmVfkFvl88NkJ1/vfT9cnV+bus1mZ/r7k3G3cwk="></script>
+    nonce="13itPtI55FOaWhCZlugFQ+qBrM3mKcpKnKGnrXD9/wQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -401,9 +401,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
