--- a/VRChat/34/941934.html
+++ b/VRChat/34/941934.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hDP8wbFDn8OBvUJR+Lc7Of85BMk5NqhZl8JopGK0Uxg="></script>
+    "Sned0G74E0YwEaibzqiUS+bcWXqMKgK0jSsUMMp92pQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"板アクセサリ","description":"※このデータは下記記載の改変データを元に制作されてます。\n板状のアクセサリなので、テクスチャを自由に改変してお使いください。\nまた利用規約は一次作者　ウツロちゃん氏の記載内容に準拠します。\n再配布の再はご注意ください。\n\n↓以下元データ規約\n\n\n”このたびはデータのダウンロードありがとうございます。\n\nこの商品はVRchat向けのアクセサリとして作成した3Dモデルです。\nお好きな場所にキーホルダーで取り付ける、あるいはチェーン部分を外して人形のようにお使いください。\nチェーン部分にはボーンが入っておりますので好きなように曲げたり、ダイナミックボーンなどのボーンを揺らすものを入れてご利用ください。\n\n本商品はblenderで作成し、Unityでの使用を想定して作られたモデルとなります。\n本商品のデータを使用したことで問題が発生した場合、作者は一切責任をとりません。\n\n\n【利用規約】\nこちらのモデルは商用・改変・成人向けなどの様々なコンテンツで使用することができます。\n本商品に含まれるデータを元にして、3Dモデルあるいは画像自体に商品性が依存するもの（例：素材集など）を製造、販売することはできません。\n加工なしの二次配布は禁止させていただきます。\n\n【一次作者】\nウツロちゃん\ntwitter:https://twitter.com/uturo_chan_3D\n連絡先：uturochan@gmail.com”\n\n\n\n【配布データ内容】  \n下記のファイルが梱包されたzipファイルとなります。\n\n・Readme.txt（必ずお読みください）\n・FBXファイル　（板状アクセサリ）\n・板テクスチャ（編集用に一応）\n・DynamicBone_setting.png（unityの有料アセット「Dynamic Bone」を使用する場合のオススメ設定）\n\nunityなどで読み込んだ後、各マテリアルをご自身で編集することを推奨します。\n\n\n【バージョン情報】\n元データ\n2018/07/10　Ver1.0.0　商品公開　ウツロちゃん氏作成\n二次データ\n2018/07/24　Ver1.0.0　商品公開　kiminouturo氏作成\n\n\n","url":"https://booth.pm/ja/items/941934","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a0a69c39-a1a7-48e1-b0e4-9cc39df5cdd0/i/941934/b3270657-70f7-4216-b998-6b443a9dcc42_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hDP8wbFDn8OBvUJR+Lc7Of85BMk5NqhZl8JopGK0Uxg="></script>
+    nonce="Sned0G74E0YwEaibzqiUS+bcWXqMKgK0jSsUMMp92pQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      123
+                                      124
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      123
+                                      124
                                     </div>
                                   </div></a>
                                 </div>
@@ -358,9 +358,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
