--- a/VRChat/65/941765.html
+++ b/VRChat/65/941765.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pWtSHqU4g+LDFYa5lpiKj23gZ9qFJpFnzLj3gTk/fNk="></script>
+    "zCGnpr0ZMy/bfN+myd7KMMsIJDotWR5jlEBSn2EvFms="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"飾り気のない鉈 △352 fbx うにぱけ","description":"「なんで拾ったんだっけ…」\n「あんまり切れなさそうだしタダでいいよ～」\n「使えそうだったらスキ！してってね～」\n　\n　簡素な作りの腰鉈\n　鞘は△338だがケチっている分両面描画でないと内側が透ける\n　改変、再配布等は有償無償を問わず自由だそうだ\n　手入れをしたら普通によく切れた","url":"https://booth.pm/ja/items/941765","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/941765/dcc39411-7001-46d6-a589-7ca61ea54776_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pWtSHqU4g+LDFYa5lpiKj23gZ9qFJpFnzLj3gTk/fNk="></script>
+    nonce="zCGnpr0ZMy/bfN+myd7KMMsIJDotWR5jlEBSn2EvFms="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
