--- a/VRChat/34/941734.html
+++ b/VRChat/34/941734.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "O2Kve5GwEkvaYS6Rfkou9m5sBpxB8MWSXgBuIaWIA7Q="></script>
+    "OLLIa4sKmbzrtAUj45wBuZz0/szWB8U04BllsALQX+g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け3Dモデル　Mk1000","description":"本製品はVRアバター向けhumanoid仕様の3Dモデルです。\n改変や商用利用はご自由にどうぞ。\n\n瞬きに加え、VRChat向けリップシンク4種(sil,aa,oh,th)を用意しております。\n\nマテリアルを複数用意してあるため、カラーリングの変更を容易に行えるようにしています。\n\n10点トラッキングでも問題なく動作します。\n\n●製品内容\nFBXファイル(7900ポリゴン)\nテクスチャファイル(UV展開図含む)\nunitypackage(Unity 5.6.3p1のみ動作確認済み)\n利用規約\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n\n本データを利用したことによる損害に対する責任は負わないものとします。\n\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n\n\n//\n2018/07/25\n規約を一部改定しました\n2018/07/27\n禁則事項を一部改定しました","url":"https://booth.pm/ja/items/941734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/941734/a585c21c-afa9-4411-98a6-f09d3503840d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O2Kve5GwEkvaYS6Rfkou9m5sBpxB8MWSXgBuIaWIA7Q="></script>
+    nonce="OLLIa4sKmbzrtAUj45wBuZz0/szWB8U04BllsALQX+g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -427,9 +427,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
