--- a/VRChat/94/940394.html
+++ b/VRChat/94/940394.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sjwgLmUlXYCRi/x5N/+SmR0aC2fUwsBsoCS7x5IOzAI="></script>
+    "gZpKOUOU+6RTFaso9Hq70sG6YBvPkMEXS28lj9RsfLI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"OnePointColor Shader","description":"Unity用の、特定の色を残し他を灰色にするシェーダーです。\nデジカメのエフェクトとかであるやつです。\n\n任意のオブジェクト(板等)に利用すると、その背景部分に効果が適用されます。\n\nパラメータは3種類で、\n\nTarget Color: 残す色\nThreshold: 同系色の許容範囲\nBrightness: 灰色にした部分の明るさ\n\nが調整できます。\n\nVRChatでも利用可能です。\n\n自由に改造して構いませんが、データの再配布、販売は不可とします。\nまた利用は自己責任とし、トラブルが発生した場合でも一切の責任は負いかねますので、予めご了承ください。\n\n\n紹介記事\nポストエフェクトっぽく世界を変える試みと、指定色を残すシェーダー\nhttp://onoty3d.hatenablog.com/entry/2018/07/23/023137","url":"https://booth.pm/ja/items/940394","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a5ee2955-f931-4ee1-9f8c-8ffe0ada05e8/i/940394/94546e8d-904c-4b7e-9572-9e96c3dcc066_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sjwgLmUlXYCRi/x5N/+SmR0aC2fUwsBsoCS7x5IOzAI="></script>
+    nonce="gZpKOUOU+6RTFaso9Hq70sG6YBvPkMEXS28lj9RsfLI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -360,9 +360,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
