--- a/VRChat/29/939529.html
+++ b/VRChat/29/939529.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WbuxDc2IJsxtVrtf3oZZXKhXvQJbJYabKTIS3/wUQgc="></script>
+    "D2nysNtty48d9KkCwYs//BXq2iWN9tJCSdbMJSc1QIA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"古びた丸眼鏡 △556 fbx うにぱけ","description":"「ん～、何だっけそれ」\n「わかんないからタダでいいよ～」\n「使えそうだったらスキ！してってね～」\n　\n　アンティーク調の丸眼鏡\n　蔓にボーンが通っているので動かせる\n　改変、再配布等は有償無償を問わず自由だそうだ\n　でもレンズが入ってない","url":"https://booth.pm/ja/items/939529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/939529/2db98039-62f0-492d-97db-0125cc52c1f0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WbuxDc2IJsxtVrtf3oZZXKhXvQJbJYabKTIS3/wUQgc="></script>
+    nonce="D2nysNtty48d9KkCwYs//BXq2iWN9tJCSdbMJSc1QIA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -357,9 +357,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
